// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderQuoteDisplay matches snapshot when loading 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "display": "flex",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 16,
        "width": 80,
      }
    }
    testID="skeleton"
  />
  <View
    style={
      {
        "height": 6,
      }
    }
  />
  <View
    style={
      {
        "height": 16,
        "width": 60,
      }
    }
    testID="skeleton"
  />
</View>
`;

exports[`ProviderQuoteDisplay matches snapshot with crypto and fiat 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "display": "flex",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    0.05 ETH
  </Text>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#686e7d",
        "fontFamily": "Geist-Regular",
        "fontSize": 14,
        "letterSpacing": 0,
        "lineHeight": 22,
      }
    }
  >
    $100.00
  </Text>
</View>
`;

exports[`ProviderQuoteDisplay matches snapshot with crypto only 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "display": "flex",
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    1.5 USDC
  </Text>
</View>
`;
